# raydium-cpi-example

./: .gitignore  README.md  build.sh
amm-cpi/: Anchor.toml
amm-cpi/programs/amm-cpi/: Cargo.toml
amm-cpi/programs/amm-cpi/src/: lib.rs
amm-cpi/programs/amm-cpi/src/instructions/: mod.rs  proxy_deposit.rs  proxy_initialize.rs  proxy_swap_base_in.rs  proxy_swap_base_out.rs  proxy_withdraw.rs
clmm-cpi/: Anchor.toml  package.json
clmm-cpi/programs/clmm-cpi/: Cargo.toml
clmm-cpi/programs/clmm-cpi/src/: lib.rs
clmm-cpi/programs/clmm-cpi/src/instructions/: mod.rs  proxy_close_position.rs  proxy_decrease_liquidity.rs  proxy_increase_liquidity.rs  proxy_initialize.rs  proxy_open_position.rs  proxy_swap.rs
clmm-cpi/tests/: config.ts  initialize.test.ts  openPosition.test.ts
clmm-cpi/tests/utils/: instruction.ts  pda.ts  util.ts
cp-swap-cpi/: Anchor.toml  package.json
cp-swap-cpi/programs/cp-swap-cpi/: Cargo.toml
cp-swap-cpi/programs/cp-swap-cpi/src/instructions/: proxy_deposit.rs  proxy_initialize.rs  proxy_swap_base_input.rs  proxy_swap_base_output.rs  proxy_withdraw.rs
cp-swap-cpi/programs/cpswap-cpi/: Cargo.toml
cp-swap-cpi/programs/cpswap-cpi/src/: lib.rs
cp-swap-cpi/programs/cpswap-cpi/src/instructions/: mod.rs  proxy_swap_base_input.rs
cp-swap-cpi/tests/: deposit.test.ts  initialize.test.ts  swap.test.ts  withdraw.test.ts
cp-swap-cpi/tests/utils/: instruction.ts
cpmm-cpi/: Anchor.toml  Cargo.toml  package.json
cpmm-cpi/programs/cpmm-cpi/: Cargo.toml
cpmm-cpi/programs/cpmm-cpi/src/: lib.rs
cpmm-cpi/programs/cpmm-cpi/src/instructions/: mod.rs  proxy_deposit.rs  proxy_initialize.rs  proxy_initialize_random_pool.rs  proxy_swap_base_input.rs  proxy_swap_base_output.rs  proxy_withdraw.rs
cpmm-cpi/tests/: config.ts  deposit.test.ts  initialize.test.ts  initializeRandomPool.test.ts  swap.test.ts  withdraw.test.ts
cpmm-cpi/tests/utils/: instruction.ts
locking-cpi/: Anchor.toml  package.json
locking-cpi/programs/locking-cpi/: Cargo.toml
locking-cpi/programs/locking-cpi/src/: lib.rs
locking-cpi/programs/locking-cpi/src/instructions/: collect_clmm_fees_and_rewards.rs  collect_cp_fees.rs  lock_clmm_position.rs  lock_cp_liquidity.rs  mod.rs
locking-cpi/tests/: lockCLPosition.ts  lockCpLiquidity.ts
locking-cpi/tests/utils/: index.ts  instruction.ts  pda.ts  util.ts
