[package]
name = "cpmm-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpmm_cpi_example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = ["raydium-cp-swap/devnet"]

[dependencies]
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", features = [
    "no-entrypoint",
    "cpi",
] }
solana-program = ">=1.16, <1.18"
spl-token = "=4.0.0"
spl-memo = "=4.0.0"
num_enum = "=0.7.0"
ahash = "=0.8.6"
